--- a/views/results.pug
+++ b/views/results.pug
@@ -3,5 +3,5 @@ html(lang="en")
     head
         title V2T Results
     #container(style='text-align:center;')
-        textarea(col='50' row='50')
+        textarea(style='width:500px;height:500px;')
           | #{result}
