--- a/views/results.pug
+++ b/views/results.pug
@@ -3,5 +3,8 @@ html(lang="en")
     head
         title V2T Results
     #container(style='text-align:center;')
+        a(href='/') Home
+        br
+        br
         textarea(style='width:500px;height:500px;')
           | #{result}
